Adapt to old Syntax